--- a/lab-00.Rmd
+++ b/lab-00.Rmd
@@ -17,15 +17,15 @@ We set up the data frame. Edit the data below to include information about your 
 
 ```{r setup-tibble}
 team_data <- tibble(
-  name = c("Peter Rabbit", "member 1", "member 2", 
+  name = c("Peter Rabbit", "Li Zhengxun", "member 2", 
            "member 3", "member 4"),
-  github_username = c("mcgregors-garden", "username 1", "username 2", 
+  github_username = c("mcgregors-garden", "jackli6511", "username 2", 
                       "username 3", "username 4"), 
-  colour = c("powderblue", "colour 1", "colour 2", 
+  colour = c("powderblue", "red", "colour 2", 
              "colour 3", "colour 4"),
-  hobby = c("Hopping", "hobby 1", "hobby 2", 
+  hobby = c("Hopping", "reading", "reading", 
             "hobby 3", "hobby 4"),
-  favourite_number = c(2, NA, NA, NA, NA)
+  favourite_number = c(2, 6, NA, NA, NA)
   )
 
 team_data
@@ -47,19 +47,18 @@ p1
 ```
 
 
-*Remove this text (including the stars), and add your answer for Exercise 18 here.*
+There is a bar chart, which shows everyone's favourite number.
 
 ### Exercises 19
 
 Change the text of the plot title and axis labels.
 
 ```{r labelled-bar-plot}
-p1 + labs(x = "Insert text here", 
-          y = "Insert text here",
-          title = "Insert text here")
+p1 + labs(x = "githubusername", 
+          y = "favoritenumber",
+          title = "number")
 ```
-
-*Remove this text (including the stars), and add your answer for Exercise 19 here.*
+The "labs" is used to control the axis and the tittle.
 
 ### Exercise 20
 
@@ -68,5 +67,5 @@ p2 <- ggplot(team_data, aes(x = hobby)) +
   geom_bar()
 p2
 ```
+Because there are many different kinds of hobbies, therefore the x-axis may be too long, readers will be hard to find rules. Changing the x-axis and put several hobbies in one position can be better.
 
-*Remove this text (including the stars) and add your answer for Exercise 20 here.*
